# Pairs-Trading-Cointegrated-Asset-Detection

./: ADF.py  Find_Pairs.py  README.md  example_tickers.csv  pyproject.toml  ticker_list.py
src/: tickers.csv
src/pairs_finder/: Find_Pairs.py  cli.py  io.py
